feat(sql): create initial entities and configurations

--- a/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
+++ b/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\EVDMS.DataAccessLayer\EVDMS.DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Implementations\" />
+    <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+
 </Project>
