--- a/EVDMS.DataAccessLayer/EVDMS.DataAccessLayer.csproj
+++ b/EVDMS.DataAccessLayer/EVDMS.DataAccessLayer.csproj
@@ -10,4 +10,18 @@
     <ProjectReference Include="..\EVDMS.Common\EVDMS.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.9" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+    <Folder Include="Data\Seeds\" />
+    <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Repositories\Implementations\" />
+    <Folder Include="UnitOfWork\" />
+  </ItemGroup>
+
 </Project>
