--- a/EVDMS.API/appsettings.Development.json
+++ b/EVDMS.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=EVDMS;Username=postgres;Password=password;"
+    "DefaultConnection": "Server=localhost;Database=evdms;Username=postgres;Password=password;"
   }
 }
