--- a/.github/workflows/csharpier-check.yaml
+++ b/.github/workflows/csharpier-check.yaml
@@ -18,11 +18,8 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Install CSharpier
-        run: dotnet tool install --global csharpier
-
-      - name: Add dotnet tools to path
-        run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+      - name: Restore local tools
+        run: dotnet tool restore
 
       - name: Check formatting
         run: dotnet csharpier check .
