tests(dal): add unit and integration tests for generic repo and uow

--- a/tests/EVDMS.BusinessLogicLayer.Tests/EVDMS.BusinessLogicLayer.Tests.csproj
+++ b/tests/EVDMS.BusinessLogicLayer.Tests/EVDMS.BusinessLogicLayer.Tests.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <RootNamespace>EVDMS.Common.Tests</RootNamespace>
+    <RootNamespace>EVDMS.BusinessLogicLayer.Tests</RootNamespace>
     <TargetFramework>net8.0</TargetFramework>
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
     <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
@@ -15,11 +15,11 @@
     <Using Include="Xunit" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="xunit.v3" Version="3.0.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\EVDMS.Common\EVDMS.Common.csproj" />
+    <ProjectReference Include="..\..\src\EVDMS.BusinessLogicLayer\EVDMS.BusinessLogicLayer.csproj" />
   </ItemGroup>
 </Project>
