--- a/tests/EVDMS.BusinessLogicLayer.Tests/EVDMS.BusinessLogicLayer.Tests.csproj
+++ b/tests/EVDMS.BusinessLogicLayer.Tests/EVDMS.BusinessLogicLayer.Tests.csproj
@@ -15,7 +15,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit.v3" Version="3.0.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
   </ItemGroup>
