--- a/tests/EVDMS.API.Tests/EVDMS.API.Tests.csproj
+++ b/tests/EVDMS.API.Tests/EVDMS.API.Tests.csproj
@@ -16,10 +16,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit.v3" Version="3.0.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\EVDMS.API\EVDMS.API.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Unit\Controllers\" />
+    <Folder Include="Integration\Controllers\" />
   </ItemGroup>
 </Project>
