--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,5 +33,5 @@ jobs:
         run: dotnet test --configuration Release --no-build --verbosity normal
         env:
           TESTCONTAINERS_HOST_OVERRIDE: host.docker.internal
-          TESTCONTAINERS_RYUK_DISABLED: ${{ env.ACT }}
+          TESTCONTAINERS_RYUK_DISABLED: true
 
