refactor(security): move connection strings to secrets.json instead

--- a/src/EVDMS.API/EVDMS.API.csproj
+++ b/src/EVDMS.API/EVDMS.API.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a3925521-27ec-49cf-94a9-d20b78306fb9</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
