--- a/src/EVDMS.API/EVDMS.API.csproj
+++ b/src/EVDMS.API/EVDMS.API.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>a3925521-27ec-49cf-94a9-d20b78306fb9</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
