--- a/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
+++ b/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 </Project>
