test(fix): fix failing api tests
- Add paramaterless constructor for ApiResponse.
- Set message = null for successful responses.

--- a/src/EVDMS.API/EVDMS.API.csproj
+++ b/src/EVDMS.API/EVDMS.API.csproj
@@ -16,4 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\EVDMS.BusinessLogicLayer\EVDMS.BusinessLogicLayer.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+  </ItemGroup>
 </Project>
