--- a/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
+++ b/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
 </Project>
