feat(auth): add updated refresh token api

--- a/src/EVDMS.DataAccessLayer/EVDMS.DataAccessLayer.csproj
+++ b/src/EVDMS.DataAccessLayer/EVDMS.DataAccessLayer.csproj
@@ -4,6 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup></ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EVDMS.Common\EVDMS.Common.csproj" />
   </ItemGroup>
@@ -11,8 +12,5 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.9" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 </Project>
