--- a/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
+++ b/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
@@ -10,6 +10,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 </Project>
