--- a/.github/workflows/main_evdms.yml
+++ b/.github/workflows/main_evdms.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: ./publish_output
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -51,5 +52,5 @@ jobs:
         with:
           app-name: 'EVDMS'
           slot-name: 'Production'
-          package: .
+          package: ./publish_output
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EFCF95DEEFC94D139CEA2983D62746B3 }}
