--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,12 +11,24 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:17
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: testdb
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -32,5 +44,6 @@ jobs:
       - name: Run tests
         run: dotnet test --configuration Release --no-build --verbosity normal
         env:
+          # Override connection string only in CI
+          ConnectionStrings__DefaultConnection: "Host=localhost;Port=5432;Database=testdb;Username=postgres;Password=postgres"
           TESTCONTAINERS_RYUK_DISABLED: true
-
