--- a/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
+++ b/src/EVDMS.BusinessLogicLayer/EVDMS.BusinessLogicLayer.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="CloudinaryDotNet" Version="1.27.7" />
+    <PackageReference Include="MailKit" Version="4.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference
       Include="Microsoft.Extensions.Options.ConfigurationExtensions"
